--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,34 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+      crossorigin="anonymous"
+    />
+    
+    <!------------------------------------------ firebase -->
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <!-- <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
+
+<script src="/__/firebase/8.4.1/firebase-auth.js"></script> -->
+    <!-- <script defer src="https://www.gstatic.com/firebasejs/8.4.1/firebase-auth.js"></script> -->
+
+    <!-- <script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyDvX6056VRi9m1BXVNO0lTmh-dkVoiRlGY",
+    authDomain: "nasaapp-firebase.firebaseapp.com",
+    projectId: "nasaapp-firebase",
+    storageBucket: "nasaapp-firebase.appspot.com",
+    messagingSenderId: "259322898841",
+    appId: "1:259322898841:web:e9bbe5e858ba1462f04b08"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script> -->
     <title>React App</title>
   </head>
   <body>
